--- a/templates/email/user_reset_password.html
+++ b/templates/email/user_reset_password.html
@@ -89,7 +89,7 @@
                                              <table style="background-color: #ffffff;border-radius: 4px;border-collapse: separate" width="100%" cellspacing="0" cellpadding="0" bgcolor="#ffffff" role="presentation">
                                                 <tr>
                                                    <td class="es-p35t es-p5b es-p30r es-p30l" align="center">
-                                                      <h1>Problemas al loggearse?</h1>
+                                                      <h1>Problemas al ingresar?</h1>
                                                    </td>
                                                 </tr>
                                                 <tr>
